src/tests/errors/parsing/test02.cmp
program p begin  
  proc a ()
  begin 
    x :=  a < b + x < d;  /* error, semicolon is a separator */
  end
end  
